Helium: Fix logo image overlapping hamburger menu icon in mobile view (#1691)

--- a/themes/helium/common/scss/helium/particles/_logo.scss
+++ b/themes/helium/common/scss/helium/particles/_logo.scss
@@ -23,9 +23,9 @@
 		display: block;
 		text-align: center;
 		margin: -0.85rem 0;
+        padding-left: $content-padding;
 
         img, svg {
-            max-width: 190px;
             margin: 0 auto;
         }
 	}
